[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/screens/sign_up/sign_up.gd" type="Script" id=3]
[ext_resource path="res://resources/font/ui_font_error.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sprites/static/ui/duck_dash_logo.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0, 0.290196, 1 )

[node name="SignUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1040.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1820.0
margin_bottom = 990.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 212.0
margin_bottom = 990.0

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 212.0
margin_bottom = 104.0
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 1604.0
margin_bottom = 990.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 1388.0
margin_bottom = 250.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 394.0
margin_right = 994.0
margin_bottom = 250.0
rect_min_size = Vector2( 600, 250 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 310.0
margin_right = 1388.0
margin_bottom = 826.0
custom_constants/margin_right = 300
custom_constants/margin_top = 10
custom_constants/margin_left = 300

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
margin_left = 300.0
margin_top = 10.0
margin_right = 1088.0
margin_bottom = 516.0
custom_constants/separation = 30

[node name="EmailLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_right = 788.0
margin_bottom = 104.0
align = 1
placeholder_text = "E-mail"

[node name="EmailErrorLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 300.0
margin_right = -600.0
margin_bottom = -730.0
custom_colors/font_color = Color( 0.945098, 0.0901961, 0.0901961, 1 )
custom_fonts/font = ExtResource( 4 )
text = "EMAIL_ERROR_email_error"
align = 1
valign = 1

[node name="UsernameLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 788.0
margin_bottom = 238.0
align = 1
placeholder_text = "Name"
caret_blink = true

[node name="UsernameErrorLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 450.0
margin_right = -600.0
margin_bottom = -580.0
rect_pivot_offset = Vector2( -39, -87 )
custom_colors/font_color = Color( 0.945098, 0.0901961, 0.0901961, 1 )
custom_fonts/font = ExtResource( 4 )
text = "USR_ERROR_usr_error"
align = 1
valign = 1

[node name="PasswordLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 788.0
margin_bottom = 372.0
align = 1
secret = true
secret_character = "•"
placeholder_text = "Password"

[node name="PasswordErrorLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 600.0
margin_right = -600.0
margin_bottom = -430.0
rect_pivot_offset = Vector2( -39, -87 )
custom_colors/font_color = Color( 0.945098, 0.0901961, 0.0901961, 1 )
custom_fonts/font = ExtResource( 4 )
text = "PWD_ERROR_pwd_error"
align = 1
valign = 1

[node name="CfPasswordLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 788.0
margin_bottom = 506.0
align = 1
secret = true
secret_character = "•"
placeholder_text = "Confirm Password"

[node name="CfPasswordErrorLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 750.0
margin_right = -600.0
margin_bottom = -280.0
rect_pivot_offset = Vector2( -39, -87 )
custom_colors/font_color = Color( 0.945098, 0.0901961, 0.0901961, 1 )
custom_fonts/font = ExtResource( 4 )
text = "CFPWD_ERROR_cfpwd_error"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 886.0
margin_right = 1388.0
margin_bottom = 990.0
alignment = 1

[node name="RegisterButton" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 494.0
margin_right = 894.0
margin_bottom = 104.0
rect_min_size = Vector2( 400, 0 )
text = "Register"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 1608.0
margin_right = 1820.0
margin_bottom = 990.0
rect_min_size = Vector2( 212, 0 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/RegisterButton" to="." method="_on_RegisterButton_pressed"]
